--- a/static/slides/01-introducao.html
+++ b/static/slides/01-introducao.html
@@ -300,7 +300,7 @@ soma aleatória de indenizações</span> (popular entre atuários que precisam c
 </ol></li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Exemplo - Soma de Indenizações</h2></hgroup><article  class="build" id="exemplo---soma-de-indenizações-1">
+</article></slide><slide class=""><hgroup><h2>Exemplo - Soma de Indenizações</h2></hgroup><article  id="exemplo---soma-de-indenizações-1" class="build">
 
 <ul>
 <li>Vamos simular uma amostra de 200 indenizações:</li>
@@ -388,7 +388,7 @@ beta</pre>
 <li>O segundo termo é a função de probabilidade da Poisson.</li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Exemplo - Soma de Indenizações</h2></hgroup><article  class="build" id="exemplo---soma-de-indenizações-6">
+</article></slide><slide class=""><hgroup><h2>Exemplo - Soma de Indenizações</h2></hgroup><article  id="exemplo---soma-de-indenizações-6" class="build">
 
 <ul>
 <li>Função para calcular a distribuição acumulada de \(S\):</li>
@@ -483,7 +483,7 @@ probabilidade que uma pessoa de idade \(x\) irá sobreviver \(k\) anos</span> é
 </ul></li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Vetores em Cálculos Atuariais</h2></hgroup><article  class="build" id="vetores-em-cálculos-atuariais-1">
+</article></slide><slide class=""><hgroup><h2>Vetores em Cálculos Atuariais</h2></hgroup><article  id="vetores-em-cálculos-atuariais-1" class="build">
 
 <ul>
 <li><p>Suponha que queremos calcular a <span class="blue3">
