--- a/public/hw/hw-01.html
+++ b/public/hw/hw-01.html
@@ -1676,8 +1676,10 @@ div.tocify {
 <li><p>Calcule a média da velocidade do vento para a região (<code>Region</code>) <code>Basin</code>.</p></li>
 <li><p>Faça um gráfico de dispersão da velocidade do vento por ano. Há alguma tendência de mudança da velocidade do vento ao longo do século XX?</p></li>
 </ol>
-<!-- ## Resolução -->
-<!-- Sugestão de respostas: [Resolução Lista 1](./resolucao/lista-01-resolucao.html) -->
+</div>
+<div id="resolução" class="section level2">
+<h2>Resolução</h2>
+<p>Sugestão de respostas: <a href="./resolucao/lista-01-resolucao.html">Resolução Lista 1</a></p>
 </div>
 
 
