posting hw2 resolution & fix typos

--- a/public/hw/hw-02.html
+++ b/public/hw/hw-02.html
@@ -1680,8 +1680,10 @@ x = runif(20,-1,1)</code></pre>
 <li><p>Encontre o banco de dados <code>accident</code> do pacote <code>hmmm</code>. Quantas linhas tem o banco de dados? E quantos acidentes no total foram registrados? Inclua os comandos que você utilizou para encontrar as respostas.</p></li>
 <li><p>Qual é a média da variável <code>Freq</code> para os acidentes do tipo <code>uncertain</code>? Considerando os acidentes do tipo <code>avoidable</code>, encontre os valores das demais variáveis (tempo afastado, faixa etária e período do dia) em que houve mais acidentes.</p></li>
 </ol>
-<!-- ## Resolução -->
-<!-- Sugestão de respostas: [Resolução Lista 2](./resolucao/lista-02-resolucao.html) -->
+</div>
+<div id="resolução" class="section level2">
+<h2>Resolução</h2>
+<p>Sugestão de respostas: <a href="./resolucao/lista-02-resolucao.html">Resolução Lista 2</a></p>
 </div>
 
 
