--- a/static/hw/hw-03.html
+++ b/static/hw/hw-03.html
@@ -1662,7 +1662,7 @@ div.tocify {
 mpg</code></pre>
 <ol start="6" style="list-style-type: decimal">
 <li><p>Quais variáveis do banco de dados são categóricas? Quais variáveis são contínuas? (Dica: use o comando <code>?mpg</code> para ver a descrição do banco).</p></li>
-<li><p>Refaça os gráficos feitos em sala para verificar a relação entre a capacidade do motor (<code>displ</code>) e o consumo do carro (<code>mpg</code>), mas com cores diferentes de acordo com o tipo de direção do carro. O que você observa na relação entre essas três variáveis?</p></li>
+<li><p>Refaça os gráficos feitos em sala para verificar a relação entre a capacidade do motor (<code>displ</code>) e o consumo do carro (<code>mpg</code>), mas com cores diferentes de acordo com o tipo de tração (<code>drv</code>) do carro. O que você observa na relação entre essas três variáveis?</p></li>
 <li><p>Refaça o gráfico do exercício anterior, mas separe em diferentes painéis os pontos de cada tipo de direção usando o comando <code>facet_grid()</code>. Você acha que essa visualização facilita a comparação dos diferentes grupos de carros?</p></li>
 </ol>
 <!-- ## Resolução -->
