2nd class week #7

--- a/public/slides/12-matematica_financeira.html
+++ b/public/slides/12-matematica_financeira.html
@@ -422,23 +422,21 @@ anuidades antecipadas</span> (&ldquo;<em>annuity-due</em>&rdquo;).</p></li>
 </ol>
 
 </article></slide><slide class=""><hgroup><h2><span class="green3">
-<strong>Exercício:</strong></span></h2></hgroup><article  id="exercício">
+<strong>Exercício 3:</strong></span></h2></hgroup><article  id="exercício-3-1">
+
+<p>1 .</p>
 
 <pre >## [1] 388.9651</pre>
 
-<pre >## [1] 388.9651</pre>
+<!-- ## <span class="green3">**Exercício:**</span> -->
 
-</article></slide><slide class=""><hgroup><h2><span class="green3">
-<strong>Exercício:</strong></span></h2></hgroup><article  id="exercício-4">
-
-<pre >## [1] 166.6667</pre>
+<p>2 .</p>
 
 <pre >## [1] 166.6667</pre>
 
-</article></slide><slide class=""><hgroup><h2><span class="green3">
-<strong>Exercício:</strong></span></h2></hgroup><article  id="exercício-5">
+<!-- ## <span class="green3">**Exercício:**</span> -->
 
-<pre >## [1] 22325.53</pre>
+<p>3 .</p>
 
 <pre >## [1] 22325.53</pre>
 
@@ -454,7 +452,7 @@ anuidades antecipadas</span> (&ldquo;<em>annuity-due</em>&rdquo;).</p></li>
 <p>Podemos calcular com a função <code>accumulatedValue</code>.</p>
 
 </article></slide><slide class=""><hgroup><h2><span class="green3">
-<strong>Exercício 4:</strong></span></h2></hgroup><article  class="build" id="exercício-4-1">
+<strong>Exercício 4:</strong></span></h2></hgroup><article  class="build" id="exercício-4">
 
 <ol>
 <li>Qual será o valor acumulado se depositarmos $5000 no começo de cada ano pelos próximos 5 anos? Considere juros compostos de 6%.</li>
@@ -462,10 +460,8 @@ anuidades antecipadas</span> (&ldquo;<em>annuity-due</em>&rdquo;).</p></li>
 
 <pre >## [1] 29876.59</pre>
 
-<pre >## [1] 29876.59</pre>
-
 </article></slide><slide class=""><hgroup><h2><span class="green3">
-<strong>Exercício 5:</strong></span></h2></hgroup><article  class="build" id="exercício-5-1">
+<strong>Exercício 5:</strong></span></h2></hgroup><article  class="build" id="exercício-5">
 
 <p>Um homem quer economizar $100.000 para pagar a faculdade de seu filho daqui a 10 anos. Um fundo de educação exige que o investidor faça depósitos fixos no final de cada ano, com uma taxa de juros garantida de 5%. Quanto o homem precisa depositar a cada ano para atingir sua meta?</p>
 
@@ -519,8 +515,6 @@ anuidades antecipadas</span> (&ldquo;<em>annuity-due</em>&rdquo;).</p></li>
 <ul>
 <li>Encontre o valor presente de uma anuidade antecipada que paga $1200 anualmente por 12 anos, com o primeiro pagamento daqui a dois anos. Considere i=6%.</li>
 </ul>
-
-<pre >## [1] 9491.144</pre>
 
 <pre >## [1] 9491.144</pre></article></slide>
 
