--- a/static/hw/hw-03.html
+++ b/static/hw/hw-03.html
@@ -1665,8 +1665,10 @@ mpg</code></pre>
 <li><p>Refaça os gráficos feitos em sala para verificar a relação entre a capacidade do motor (<code>displ</code>) e o consumo do carro (<code>mpg</code>), mas com cores diferentes de acordo com o tipo de tração (<code>drv</code>) do carro. O que você observa na relação entre essas três variáveis?</p></li>
 <li><p>Refaça o gráfico do exercício anterior, mas separe em diferentes painéis os pontos de cada tipo de direção usando o comando <code>facet_grid()</code>. Você acha que essa visualização facilita a comparação dos diferentes grupos de carros?</p></li>
 </ol>
-<!-- ## Resolução -->
-<!-- Sugestão de respostas: [Resolução Lista 3](./resolucao/lista-03-resolucao.html) -->
+</div>
+<div id="resolução" class="section level2">
+<h2>Resolução</h2>
+<p>Sugestão de respostas: <a href="./resolucao/lista-03-resolucao.html">Resolução Lista 3</a></p>
 </div>
 
 
