--- a/static/hw/hw-04.html
+++ b/static/hw/hw-04.html
@@ -1655,11 +1655,15 @@ div.tocify {
 <li><p>Faça uma análise descritiva da covariável <code>checking_status</code> (saldo da conta corrente), e analise se há diferença na distribuição de acordo com a classificação dos clientes (variável <code>class</code>).</p></li>
 <li><p>Analise a probabilidade de <span class="math inline">\(Y=1\)</span>, ou seja, classificar um cliente como mau, dado a distribuição da duração do empréstimo (variável <code>duration</code>). Para isso, siga o exemplo feito em sala para a variável idade. Sugestão: dividir a duração do empréstimo registrada em meses em intervalos de 0-6, 6-12, 12-18, 18-24, 24-36, 36+.</p></li>
 </ol>
-<!-- ## Resolução -->
-<!-- Sugestão de respostas:  -->
-<!-- - [Resolução Lista 4](./resolucao/lista-04-resolucao.html) -->
-<!-- - [Arquivo .Rmd](./resolucao/lista-04-resolucao.Rmd) -->
-<!-- - [Resolução em pdf](./resolucao/lista-04-resolucao.pdf) -->
+</div>
+<div id="resolução" class="section level2">
+<h2>Resolução</h2>
+<p>Sugestão de respostas:</p>
+<ul>
+<li><p><a href="./resolucao/lista-04-resolucao.html">Resolução Lista 4</a></p></li>
+<li><p><a href="./resolucao/lista-04-resolucao.Rmd">Arquivo .Rmd</a></p></li>
+<li><p><a href="./resolucao/lista-04-resolucao.pdf">Resolução em pdf</a></p></li>
+</ul>
 </div>
 
 
