week #13 (2nd class), hw5 & 6 resol, final hw

--- a/public/hw/hw-05.html
+++ b/public/hw/hw-05.html
@@ -1665,8 +1665,15 @@ div.tocify {
 <li><p>Calcule o prêmio trimestral que um segurado de 50 anos deve pagar até a sua morte para garantir uma indenização de $100.000 paga no final do trimestre de morte.</p></li>
 <li><p>Calcule o prêmio mensal pago durante 15 anos para um segurado de 30 anos que deseja contratar um seguro temporário por 35 anos, com indenização de $100.000 paga no final do mês de morte. Assuma uma taxa de juros de 3%.</p></li>
 </ol>
-<!-- ## Resolução -->
-<!-- Sugestão de respostas: [Resolução Lista 5](./resolucao/lista-05-resolucao.html) -->
+</div>
+<div id="resolução" class="section level2">
+<h2>Resolução</h2>
+<p>Sugestão de respostas:</p>
+<ul>
+<li><p><a href="./resolucao/lista-05-resolucao.html">Resolução Lista 5</a></p></li>
+<li><p><a href="./resolucao/lista-05-resolucao.Rmd">Arquivo .Rmd</a></p></li>
+<li><p><a href="./resolucao/lista-05-resolucao.pdf">Resolução em pdf</a></p></li>
+</ul>
 </div>
 
 
