--- a/public/hw/hw-06.html
+++ b/public/hw/hw-06.html
@@ -1667,7 +1667,15 @@ div.tocify {
 </ol></li>
 <li><p>Um segurado de 65 anos quer contratar uma anuidade antecipada, anual e vitalícia de $1.000. Encontre o menor prêmio único que a seguradora pode cobrar para garantir que a probabilidade de perda positiva não seja maior do que 25%.</p></li>
 </ol>
-<!-- ## Resolução -->
+</div>
+<div id="resolução" class="section level2">
+<h2>Resolução</h2>
+<p>Sugestão de respostas:</p>
+<ul>
+<li><p><a href="./resolucao/lista-06-resolucao.html">Resolução Lista 6</a></p></li>
+<li><p><a href="./resolucao/lista-06-resolucao.Rmd">Arquivo .Rmd</a></p></li>
+<li><p><a href="./resolucao/lista-06-resolucao.pdf">Resolução em pdf</a></p></li>
+</ul>
 <!-- Sugestão de respostas: [Resolução Lista 6](./resolucao/lista-06-resolucao.html) -->
 </div>
 
