--- a/static/hw/trabalho-final.html
+++ b/static/hw/trabalho-final.html
@@ -1629,7 +1629,7 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">Trabalho Final</h1>
-<h4 class="date">Apresentações: <strong>25/03/2021</strong> e <strong>30/03/2021</strong> durante a aula <br /> Entrega: arquivo .Rmd até <strong>30/03/2021</strong> via Moodle</h4>
+<h4 class="date">Apresentações: <strong>30/03/2021</strong> durante a aula <br /> Entrega: arquivo .Rmd até <strong>30/03/2021</strong> via Moodle</h4>
 
 </div>
 
@@ -1638,13 +1638,13 @@ div.tocify {
 <h2>Instruções</h2>
 <ul>
 <li><p>O trabalho será feito em duplas. Cada dupla deverá preencher este <a href="https://docs.google.com/spreadsheets/d/1fbBo-jIbAgh50d0MiCB9T8OmvdePhbV__7OO01wKxQ4/edit?usp=sharing">formulário</a> até o dia 16/03/21 com os dados do seu trabalho, e escolher o horário da sua apresentação.</p></li>
-<li><p>As apresentações terão duração de 15 minutos cada, e serão feitas durante as aulas dos dias <strong>25 e 30 de março</strong>.</p></li>
+<li><p>As apresentações terão duração de 15 minutos cada, e serão feitas durante a aula do dia <strong>30 de março</strong>.</p></li>
 <li><p>Os slides deverão ser feitos com o <code>rmarkdown</code>.</p>
 <ul>
 <li><p>Para isso, você deve salvar o template <a href="apresentacao_trabalho.Rmd">apresentacao_trabalho.Rmd</a> no seu computador e compilar usando o botão <strong>Knit</strong>. O resultado deverá ser igual aos slides em <a href="apresentacao_trabalho.html">apresentacao_trabalho.html</a>.</p></li>
 <li><p>Depois, é só editar o template para incluir as suas informações (<em>Obs.: só edite o arquivo após ter certeza que ele compilou corretamente</em>).</p></li>
 </ul></li>
-<li><p>Cada dupla deverá submeter <strong>apenas o arquivo .Rmd</strong> no Moodle até o dia 30/03/2021.</p></li>
+<li><p>Cada aluno da dupla deverá submeter <strong>apenas o arquivo .Rmd</strong> no Moodle até o dia 30/03/2021.</p></li>
 </ul>
 </div>
 <div id="conteúdo" class="section level2">
